[tool.poetry]
name = "workspace"
version = "0.1.0"
description = "A package for managing file-based workspace."
authors = ["Xiubo Zhang"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
